<resources>
    <string name="app_name">Country Connoisseur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guess_flag" />
    <string name="country_connoisseur">Country Connoisseur</string>
    <string name="credit_by_hamzakarakaya">Credit by hamzakarakaya</string>
    <string name="empty">-</string>
    <string name="settingsicon">settingsIcon</string>
    <string name="app_slogan">More knowledge \n More fun</string>
    <string name="guess_flag_screen">Guess Flag</string>
    <string name="guess_capitol_of_city_screen">Guess the capitals of countries</string>
    <string name="which_country_screen">Which country?</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-in</string>
    <string name="sign_out">Sign-out</string>
    <string name="created_by_user">Created by user</string>
</resources>